02-k8s/basic-express/deployment.yaml

        
apiVersion: v1
kind: Deployment
metadata:
  name: basic-express-deploy
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: basic-express-cluster
    spec:
      containers:
      - name: basic-express-cluster
        image: basic-express
        ports:
        - containerPort: 80
