02-k8s/basic-express/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-express-service
spec:
  selector:
    app: basic-express
  ports:
  - protocol: TCP
    port: 80
    nodePort: 3000
    targetPort: 80
