02-k8s/basic-express/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: ingress-basic-express
  annotations:
    kubernetes.io/ingress.class: "basic-express"
spec:
  rules:
    - host: basicexpress.kube.com
    http:
      paths:
        - path: /
          backend:
            serviceName: basic-express-service
            servicePort: 80
